[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-app-build-kit"
version = "1.0.0"
description = "Docker container build and management toolkit for multi-stack application development"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["docker", "build", "containers", "php", "node", "python", "java", "mysql", "postgres", "mongodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "docker>=5.0.0",
]

[project.scripts]
dapp-bk-py = "hig_docker_build_kit.cli:main"

[project.urls]
Homepage = "https://github.com/dsdobrzynski/docker-app-build-kit"
Documentation = "https://github.com/dsdobrzynski/docker-app-build-kit#readme"
Repository = "https://github.com/dsdobrzynski/docker-app-build-kit"

[tool.setuptools.packages.find]
where = ["python"]
include = ["hig_docker_build_kit*"]
